# fastapi-practice

./: Dockerfile  docker-compose.yml  pyproject.toml  requirements.txt
api/: db.py  main.py  migrate_db.py
api/cruds/: done.py  task.py
api/models/: task.py
api/routers/: done.py  task.py
api/schemas/: task.py
tests/: conftest.py  test_main.py
